samples/_failures_safe/1761527617_b3b0c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fd6f20f.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_1fd6f20f.c:145:1: error: expected declaration or statement at end of input
  145 | int matrix_determinant(int **matrix, int n) {
      | ^~~
